objects/CC_List__c.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read/Write</fullName>
                    <default>true</default>
                    <label>Read/Write</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bug_Work_Request__c</fullName>
        <label>Work Request</label>
        <referenceTo>Bug__c</referenceTo>
        <relationshipName>CC_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, user will not receive any emails for this Request.</inlineHelpText>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>User__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roles_Responsibility__c</fullName>
        <label>Roles &amp; Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription Only</fullName>
                    <default>true</default>
                    <label>Subscription Only</label>
                </value>
                <value>
                    <fullName>Release Engineer</fullName>
                </value>
                <value>
                    <fullName>Other Contributors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, user will receive only Status change notifications.</inlineHelpText>
        <label>Status Notification Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Device List</fullName>
                </value>
                <value>
                    <fullName>Marketing Input</fullName>
                </value>
                <value>
                    <fullName>BEOL Process Asssumption</fullName>
                </value>
                <value>
                    <fullName>FEOL Process Assumption</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Memory Solutions SRAM</fullName>
                </value>
                <value>
                    <fullName>E-Fuse</fullName>
                </value>
                <value>
                    <fullName>Logic/Analog Inputs</fullName>
                </value>
                <value>
                    <fullName>Passive Inputs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <description>WR Id + UserId</description>
        <label>Unique</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UniqueText__c</fullName>
        <formula>Bug_Work_Request__c +  User__c</formula>
        <label>UniqueText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CC List/Contributor</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>CC No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Lists/Contributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CCList_Contributor_UserChangeValidation</fullName>
        <active>true</active>
        <description>You cannot change the user associated with a CClist member. If you want to change the user anme then delete the previous and craete a new record.</description>
        <errorConditionFormula>AND(NOT($Setup.IntegrationUsers__c.Skip_Validation_Rule__c),
$Profile.Name &lt;&gt; &quot;System Administrator&quot; ,
ISCHANGED( User__c ), NOT( ISNEW()))</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>You cannot change the ccList user. Please delete this record and create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CC_ListContributor_Type_Validation</fullName>
        <active>true</active>
        <description>Type is Mandatory for Other Contributors role.</description>
        <errorConditionFormula>AND(NOT($Setup.IntegrationUsers__c.Skip_Validation_Rule__c), TEXT(Roles_Responsibility__c)=&apos;Other Contributors&apos;, ISBLANK(TEXT(Type__c)))</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Type is Mandatory for Other Contributors role.</errorMessage>
    </validationRules>
</CustomObject>